hummingbird-api/api/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hummingbird-api
  namespace: hummingbird-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hummingbird-api
  template:
    metadata:
      labels:
        app: hummingbird-api
    spec:
      serviceAccountName: hummingbird-api
      containers:
        - name: api
          image: pemapol/hummingbird-api:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: hummingbird-api
  namespace: hummingbird-api
spec:
  selector:
    app: hummingbird-api
  ports:
    - port: 5000
      targetPort: 5000
